--- a/src/assets/style/_map.scss
+++ b/src/assets/style/_map.scss
@@ -5,6 +5,12 @@
     height: 100%;
     background-color: $color-light--1;
 
+    .leaflet-control-zoom {
+        a > span {
+            color: $color-brand--2;
+        }
+    }
+
     .leaflet-popup {
         .leaflet-popup-content {
             font-size: 1.5rem;
