--- a/src/assets/style/_map.scss
+++ b/src/assets/style/_map.scss
@@ -12,6 +12,13 @@
     }
 
     .leaflet-popup {
+        .leaflet-popup-content-wrapper {
+            background-color: $color-dark--1;
+            color: $color-light--2;
+            border-radius: 5px;
+            padding-right: 0.6rem;
+        }
+
         .leaflet-popup-content {
             font-size: 1.5rem;
         }
